# greentic-runner

./: .gitignore  Cargo.toml  README.md
.codex/: ACT-PR-01.md  ACT-PR-02.md  ACT-PR-03.md  ACT-PR-04.md  PR-01-public-wit.md  repo_overview.md
.codex/done/: MRPr-3.md  MRPr-4.md  PR-RUN-01.md  PR-RUN-02.md
.github/workflows/: gen-bindings.yml  publish.yml  rust-ci.yml
ci/: local_check.sh
crates/greentic-runner/: Cargo.toml
crates/greentic-runner-desktop/: Cargo.toml
crates/greentic-runner-desktop/src/: lib.rs
crates/greentic-runner-host/: Cargo.toml  README.md
crates/greentic-runner-host/src/: boot.rs  component_api.rs  config.rs  host.rs  lib.rs  oauth.rs  pack.rs  provider_core_only.rs  runtime.rs  runtime_wasmtime.rs  secrets.rs  telemetry.rs  verify.rs
crates/greentic-runner-host/src/engine/: policy.rs  runtime.rs  state_machine.rs
crates/greentic-runner-host/src/fault/: mod.rs
crates/greentic-runner-host/src/http/: admin.rs
crates/greentic-runner-host/src/imports/: mod.rs
crates/greentic-runner-host/src/runner/: engine.rs  flow_adapter.rs  invocation.rs  mod.rs  operator.rs
crates/greentic-runner-host/src/storage/: state.rs
crates/greentic-runner-host/src/testing/: fault_injection.rs
crates/greentic-runner-host/src/trace/: mod.rs  model.rs  recorder.rs
crates/greentic-runner-host/src/validate/: mod.rs
crates/greentic-runner-host/tests/: audit_multi_pack.rs  component_exec.rs  materialized_components.rs  oauth_broker.rs  pack_manifest.rs  secrets_canonicalization.rs  secrets_scoping.rs  secrets_store_put.rs
crates/greentic-runner/examples/: run_demo.rs
crates/greentic-runner/src/: bridge_integration.rs  events_integration.rs  lib.rs  main.rs  worker_integration.rs
crates/greentic-runner/src/cli/: conformance.rs  mod.rs  replay.rs
crates/greentic-runner/src/gen_bindings/: component.rs  mod.rs
crates/greentic-runner/src/runtime/: capabilities.rs  executor.rs  mod.rs  pack.rs  plan.rs
crates/greentic-runner/tests/: conformance.rs  contract_cli.rs  fault_matrix.rs  gen_bindings.rs  replay.rs  runtime_pack.rs  snapshots.rs  worker_integration.rs
crates/runner-core/: Cargo.toml
crates/runner-core/examples/: resolve_fs.rs
crates/runner-core/src/packs/resolver/: http.rs
crates/runner-core/tests/: pack_manager.rs
crates/tests/: Cargo.toml
crates/tests/tests/: host_integration.rs  host_wasi_p2_roundtrip.rs  pack_runtime_wasm.rs  provider_invoke.rs  secrets_store_smoke.rs  weather_smoke.rs  wit_canonical_guard.rs
docs/: component_payload_and_state.md  fault-injection.md  pack-resolution-testing.md  runner-host-inventory.md  runner_current_behaviour.md
examples/: index.json
examples/bindings/: default.bindings.yaml
examples/packs/: demo.gtpack
tests/assets/component-v0-6-dummy/: Cargo.toml
tests/assets/component-v0-6-dummy/src/: lib.rs
tests/fixtures/: proptest-seeds.txt
tests/fixtures/component-echo/: Cargo.toml
tests/fixtures/component-echo/src/: lib.rs
tests/fixtures/faults/: basic.json
tests/fixtures/gen-bindings/weather-demo/: bindings.complete.yaml  bindings.hints.yaml  pack.yaml
tests/fixtures/gen-bindings/weather-demo-strict/: bindings.hints.yaml  bindings.strict.yaml  pack.yaml
tests/fixtures/gen-bindings/weather-demo-strict/flows/: alerts.yaml
tests/fixtures/gen-bindings/weather-demo/flows/: weather.yaml
tests/fixtures/pack-component/: Cargo.toml  README.md
tests/fixtures/pack-component/src/: lib.rs
tests/fixtures/packs/runner-components/: bindings.yaml  build.sh  manifest.cbor  pack.yaml
tests/fixtures/packs/runner-components/components/: emit_response.wasm  qa_process.wasm
tests/fixtures/packs/runner-components/flows/: demo.yaml
tests/fixtures/packs/runner-components/src/: qa.rs
tests/fixtures/packs/secrets_store_smoke/: pack.yaml
tests/fixtures/packs/secrets_store_smoke/components/: Cargo.toml  build.sh  echo_secret.rs  echo_secret.wasm
tests/fixtures/packs/secrets_store_smoke/components/wit/echo-secret/: package.wit
tests/fixtures/runner-components/: Cargo.toml
tests/fixtures/runner-components/emit_response/: Cargo.toml
tests/fixtures/runner-components/emit_response/src/: lib.rs
tests/fixtures/runner-components/packager/: Cargo.toml
tests/fixtures/runner-components/packager/src/: main.rs
tests/fixtures/runner-components/qa_process/: Cargo.toml
tests/fixtures/runner-components/qa_process/src/: lib.rs
tests/fixtures/runner-components/state_store_component/src/: lib.rs
tests/fixtures/runner-components/target-test/: .rustc_info.json
tests/fixtures/runner-components/target-test/wasm32-wasip2/release/.fingerprint/bitflags-91dd0877e40132c5/: lib-bitflags  lib-bitflags.json
tests/fixtures/runner-components/target-test/wasm32-wasip2/release/.fingerprint/itoa-f39e9f7128ed7b21/: lib-itoa  lib-itoa.json
tests/fixtures/runner-components/target-test/wasm32-wasip2/release/.fingerprint/memchr-50b8e43ebcaf52a0/: lib-memchr  lib-memchr.json
tests/fixtures/runner-components/target-test/wasm32-wasip2/release/.fingerprint/qa_process-f91f605c3b29c01d/: lib-qa_process  lib-qa_process.json
tests/fixtures/runner-components/target-test/wasm32-wasip2/release/.fingerprint/ryu-c4cf28e3f46973ee/: lib-ryu  lib-ryu.json
tests/fixtures/runner-components/target-test/wasm32-wasip2/release/.fingerprint/serde-7c06d99ed7294915/: run-build-script-build-script-build  run-build-script-build-script-build.json
tests/fixtures/runner-components/templating_handlebars/: Cargo.toml
tests/fixtures/runner-components/templating_handlebars/src/: lib.rs
tests/fixtures/wasi-p2-smoke/: Cargo.toml
tests/fixtures/wasi-p2-smoke/src/: lib.rs
tests/fixtures/worker_component/: Cargo.toml
tests/fixtures/worker_component/src/: lib.rs
tests/fixtures/worker_component/wit/: worker.wit
tests/snapshots/: README.md
tests/snapshots/expected/: scenario_a.snap  scenario_b.snap  scenario_c.snap  scenario_d.snap
tests/snapshots/inputs/: scenario_a.json  scenario_b.json  scenario_c.json  scenario_d.json
(+21 files in other folders)
