[workspace]
members = [
    "crates/greentic-runner",
    "crates/greentic-runner-host",
    "crates/greentic-runner-desktop",
    "crates/tests",
    "crates/runner-core", "tests/fixtures/packs/secrets_store_smoke/components",
]
resolver = "2"
exclude = [
    "tests/fixtures/oauth-broker-component",
    "tests/fixtures/component-echo",
    "tests/fixtures/runner-components",
    "tests/fixtures/wasi-p2-smoke",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.4.15"

[workspace.dependencies]
arc-swap = "1.7"
async-trait = "0.1"
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
greentic-flow = "0.4"
greentic-types = { version = "0.4", features = ["telemetry-autoinit"] }
greentic-pack = { version = "0.4" }
greentic-session = "0.4"
greentic-state = "0.4"
greentic-interfaces = { version = "0.4", default-features = false, features = ["bindings-rust"] }
greentic-interfaces-host = { version = "0.4" }
greentic-interfaces-wasmtime = { version = "0.4" }
greentic-config = "0.4"
greentic-config-types = "0.4"
greentic-oauth-sdk = { version = "0.4"  }
greentic-oauth-host = { version = "0.4" }
greentic-runner-host = { path = "crates/greentic-runner-host", version = "0.4" }
greentic-runner-desktop = { path = "crates/greentic-runner-desktop", version = "0.4" }
runner-core = { path = "crates/runner-core", version = "0.4" }
greentic-secrets = "0.4"
hex = "0.4"
humantime = "2.1"
lru = "0.16"
once_cell = "1"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.5"
serde_cbor = "0.11"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "rt", "signal", "time", "net", "sync", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
wasmparser = "0.243"
cron = "0.15"
uuid = { version = "1", features = ["v4"] }
url = "2"
zip = { version = "7", default-features = false, features = ["deflate-flate2"] }
indexmap = "2"
bytes = "1"
hmac = "0.12"
sha1 = "0.10"
blake3 = "1"
semver = "1"
tempfile = "3"
tiny_http = "0.12"
serial_test = "3"
toml = "0.9"
greentic-telemetry = "0.4"
wasmtime = { version = "39", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "39", default-features = false, features = ["p2"] }
jsonschema = "0.37"

[profile.release.package."echo-secret"]
# Size-tuned build for the secrets_store_smoke fixture component.
opt-level = "z"
strip = true
