[package]
name = "greentic-runner-host"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Host runtime shim for Greentic runner: config, pack loading, activity handling"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
readme = "README.md"
keywords = ["greentic", "runner", "wasmtime", "mcp", "flows"]
categories = ["asynchronous", "api-bindings", "command-line-utilities"]

[features]
default = ["verify"]
telemetry = ["dep:greentic-telemetry"]
verify = []

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
cron.workspace = true
greentic-flow.workspace = true
greentic-interfaces-host.workspace = true
greentic-interfaces-wasmtime.workspace = true
greentic-interfaces.workspace = true
greentic-pack.workspace = true
greentic-types.workspace = true
greentic-session.workspace = true
greentic-state.workspace = true
greentic-secrets.workspace = true
hex.workspace = true
humantime.workspace = true
indexmap.workspace = true
lru.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
runner-core.workspace = true
serde = { workspace = true }
serde_cbor.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
wasmparser.workspace = true
zip.workspace = true
bytes.workspace = true
futures.workspace = true
hmac.workspace = true
sha1.workspace = true
once_cell.workspace = true

# External stack components
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
greentic-telemetry = { workspace = true, optional = true }

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
once_cell.workspace = true
