[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Greentic runner binaries and re-exported host/new-runner APIs"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[features]
default = ["legacy-host"]
legacy-host = []
redis = []
schema = []
[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-runner-host.workspace = true
greentic-runner-desktop.workspace = true
greentic-types.workspace = true
humantime.workspace = true
runner-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
indexmap.workspace = true
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
wasmparser.workspace = true
url = "2"
zip.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true

[lib]
name = "greentic_runner"
path = "src/lib.rs"

[[bin]]
name = "greentic-runner"
path = "src/main.rs"
required-features = ["legacy-host"]

[[bin]]
name = "greentic-gen-bindings"
path = "src/bin/gen_bindings.rs"

[[bin]]
name = "greentic-runtime"
path = "src/bin/runtime_cli.rs"

[dev-dependencies]
tempfile = "3"
semver = "1"
