[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Greentic runner binaries and re-exported host/new-runner APIs"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[package.metadata.binstall]
bin = ["greentic-runner", "greentic-runner-cli"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
greentic-runner-host = { workspace = true }
greentic-runner-desktop = { workspace = true }
greentic-interfaces.workspace = true
greentic-interfaces-host.workspace = true
greentic-interfaces-wasmtime.workspace = true
greentic-types.workspace = true
greentic-config.workspace = true
greentic-distributor-client.workspace = true
humantime.workspace = true
runner-core = { workspace = true }
chrono.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml_bw.workspace = true
serde.workspace = true
wasmparser.workspace = true
url.workspace = true
indexmap.workspace = true
toml.workspace = true
zip.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[features]
fault-injection = ["greentic-runner-host/fault-injection"]

[dev-dependencies]
greentic-flow.workspace = true
serial_test.workspace = true
semver.workspace = true
insta.workspace = true
greentic-state.workspace = true

[lib]
name = "greentic_runner"
path = "src/lib.rs"

[[bin]]
name = "greentic-runner"
path = "src/main.rs"

[[bin]]
name = "greentic-gen-bindings"
path = "src/bin/gen_bindings.rs"

[[bin]]
name = "greentic-runner-cli"
path = "src/bin/greentic-runner-cli.rs"
