[package]
name = "runner-core"
edition.workspace = true
license = "MIT"
version.workspace = true
description = "Core helpers for Greentic runner: pack resolution, signing, session/state glue, and utilities"
repository = "https://github.com/greentic-ai/greentic-runner"
homepage = "https://github.com/greentic-ai/greentic-runner"
readme = "README.md"

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
greentic-pack.workspace = true
reqwest.workspace = true
semver.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
url.workspace = true

[dev-dependencies]
tiny_http.workspace = true
