[package]
name = "greentic-runner-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
greentic-runner-host.workspace = true
runner-core.workspace = true
serial_test = "3"
tempfile = "3"
async-trait.workspace = true
parking_lot.workspace = true
greentic-types.workspace = true
