[package]
name = "greentic-runner-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
greentic-runner-host.workspace = true
runner-core.workspace = true
serial_test.workspace = true
tempfile.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
greentic-types.workspace = true
jsonschema.workspace = true
greentic-flow.workspace = true
zip.workspace = true
semver.workspace = true
