[package]
name = "echo-secret"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "echo_secret.rs"

[dependencies]
anyhow = "1"
wit-bindgen = { version = "0.47", default-features = false, features = ["macros", "realloc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
