[package]
name = "echo-secret"
version = "0.0.1"
edition = "2021"
publish = false
description = "Test fixture component used by secrets_store_smoke; not published"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "echo_secret.rs"

[dependencies]
anyhow = "1"
wit-bindgen = { version = "0.50", default-features = false, features = ["macros", "realloc"] }
